
syntax = "proto3";

package Microsoft.Net.Wifi;

enum RadioBand
{
    option allow_alias = true;
    
    RadioBandUnknown = 0;
    RadioBand2400MHz = 1;
    RadioBand2_4GHz = 1;
    RadioBandTwoPoint4GHz = 1;
    RadioBand5000MHz = 2;
    RadioBand5_0GHz = 2;
    RadioBandFiveGHz = 2;
    RadioBand6000MHz = 3;
    RadioBand6_0GHz = 3;
    RadioBandSixGHz = 3;
}

enum Dot11PhyType
{
    option allow_alias = true;

    Dot11PhyTypeUnknown = 0;
    Dot11PhyTypeB = 1;
    Dot11PhyTypeHrdsss = 1;
    Dot11PhyTypeG = 2;
    Dot11PhyTypeErp = 2;
    Dot11PhyTypeN = 3;
    Dot11PhyTypeHt = 3;
    Dot11PhyTypeA = 4;
    Dot11PhyTypeOfdm = 4;
    Dot11PhyTypeAC = 5;
    Dot11PhyTypeVht = 5;
    Dot11PhyTypeAD = 6;
    Dot11PhyTypeDmg = 6;
    Dot11PhyTypeAX = 7;
    Dot11PhyTypeHe = 7;
    Dot11PhyTypeBE = 8;
    Dot11PhyTypeEht = 8;
}

enum Dot11AuthenticationAlgorithm
{
    option allow_alias = true;

    Dot11AuthenticationAlgorithmUnknown = 0;
    Dot11AuthenticationAlgorithmOpen = 1;
    Dot11AuthenticationAlgorithmSharedKey = 2;
    Dot11AuthenticationAlgorithmWpa = 3;
    Dot11AuthenticationAlgorithmWpaPsk = 4;
    Dot11AuthenticationAlgorithmWpaNone = 5;
    Dot11AuthenticationAlgorithmRsna = 6;
    Dot11AuthenticationAlgorithmRsnaPsk = 7;
    Dot11AuthenticationAlgorithmWpa3 = 8;
    Dot11AuthenticationAlgorithmWpa3Enterprise192 = 8;
    Dot11AuthenticationAlgorithmWpa3Enterprise = 9;
    Dot11AuthenticationAlgorithmSae = 10;
    Dot11AuthenticationAlgorithmWpa3Personal = 10;
    Dot11AuthenticationAlgorithmOwe = 11;
}

// 802.11 Authentication and Key Management (AKM) Suites.
enum Dot11AkmSuite
{
    Dot11AkmSuiteReserved0 = 0;
    Dot11AkmSuite8021x = 1;
    Dot11AkmSuitePsk = 2;
    Dot11AkmSuiteFt8021x = 3;
    Dot11AkmSuiteFtPsk = 4;
    Dot11AkmSuite8021xSha256 = 5;
    Dot11AkmSuitePskSha256 = 6;
    Dot11AkmSuiteTdls = 7;
    Dot11AkmSuiteSae = 8;
    Dot11AkmSuiteFtSae = 9;
    Dot11AkmSuiteApPeerKey = 10;
    Dot11AkmSuite8021xSuiteB = 11;
    Dot11AkmSuite8021xSuiteB192 = 12;
    Dot11AkmSuiteFt8021xSha384 = 13;
    Dot11AkmSuiteFilsSha256 = 14;
    Dot11AkmSuiteFilsSha384 = 15;
    Dot11AkmSuiteFtFilsSha256 = 16;
    Dot11AkmSuiteFtFilsSha384 = 17;
    Dot11AkmSuiteOwe = 18;
    Dot11AkmSuiteFtPskSha384 = 19;
    Dot11AkmSuitePskSha384 = 20;
}

enum Dot11CipherAlgorithm
{
    option allow_alias = true;

    Dot11CipherAlgorithmUnknown = 0;
    Dot11CipherAlgorithmNone = 1;
    Dot11CipherAlgorithmWep = 2;
    Dot11CipherAlgorithmWep40 = 3;
    Dot11CipherAlgorithmWep104 = 4;
    Dot11CipherAlgorithmTkip = 5;
    Dot11CipherAlgorithmBip = 6;
    Dot11CipherAlgorithmBipCmac128 = 6;
    Dot11CipherAlgorithmBipGmac128 = 7;
    Dot11CipherAlgorithmBipGmac256 = 8;
    Dot11CipherAlgorithmBipCmac256 = 9;
    Dot11CipherAlgorithmGcmp = 10;
    Dot11CipherAlgorithmGcmp128 = 10;
    Dot11CipherAlgorithmGcmp256 = 11;
    Dot11CipherAlgorithmCcmp256 = 12;
    Dot11CipherAlgorithmWpaUseGroup = 13;
    Dot11CipherAlgorithmRsnUseGroup = 13;
}

message Dot11Ssid
{
    oneof Value
    {
        string Name = 1;
        string Hex = 2;
        bytes Data = 3;
    }
}

message Dot11MacAddress
{
    bytes Value = 1;
}

message SharedKey
{
    oneof Value
    {
        string Passphrase = 1;
        bytes Data = 2;
    }
}

message AccessPointConfiguration
{
    Dot11Ssid Ssid = 1;
    Dot11MacAddress Bssid = 2;
    Dot11PhyType PhyType = 3;
    Dot11AuthenticationAlgorithm AuthenticationAlgorithm = 4;
    Dot11CipherAlgorithm EncryptionAlgorithm = 5;
    repeated RadioBand Bands = 6;
}

message AccessPointCapabilities
{
    repeated Microsoft.Net.Wifi.RadioBand Bands = 1;
    repeated Microsoft.Net.Wifi.Dot11PhyType PhyTypes = 2;
    repeated Microsoft.Net.Wifi.Dot11AuthenticationAlgorithm AuthenticationAlgorithms = 3;
    repeated Microsoft.Net.Wifi.Dot11CipherAlgorithm EncryptionAlgorithms = 4;
}

enum AccessPointState
{
    AccessPointStateUnknown = 0;
}
